k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memdog
  labels:
    app.kubernetes.io/part-of: memdog
