k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: mem-dog
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/part-of: mem-dog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ui
  ports:
    - port: 3000
      targetPort: 8080
      name: http
